v1.0.0/modules/schema/pages/class/CurrentTransformerInfo.adoc
= `CurrentTransformerInfo`
:toclevels: 4


+++Properties of current transformer asset.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:CurrentTransformerInfo`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/AssetInfo.adoc[`AssetInfo`]
*** *`CurrentTransformerInfo`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
CurrentTransformerInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}









Ratio {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Ratio {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}





Ratio {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}







Ratio {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}





Ratio {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



PowerSystemResource {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



CatalogAssetType {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ProductAssetModel {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}







CurrentTransformerInfo -> Ratio: maxRatio


CurrentTransformerInfo -> Ratio: nominalRatio



CurrentTransformerInfo -> Ratio: primaryRatio




CurrentTransformerInfo -> Ratio: secondaryRatio



CurrentTransformerInfo -> Ratio: tertiaryRatio


CurrentTransformerInfo -> PowerSystemResource: PowerSystemResources


CurrentTransformerInfo -> CatalogAssetType: CatalogAssetType


CurrentTransformerInfo -> Asset: Assets


CurrentTransformerInfo -> ProductAssetModel: ProductAssetModel


CurrentTransformerInfo -> DiagramObject: DiagramObjects


CurrentTransformerInfo -> InstanceSet: InstanceSet


CurrentTransformerInfo -> Name: Names


CurrentTransformerInfo -> ChangeSetMember: PropertiesCIMDataObject


CurrentTransformerInfo -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<accuracyClass,`accuracyClass`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++CT accuracy classification.+++

| <<accuracyLimit,`accuracyLimit`>>
| 0..1
| xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++Accuracy limit.+++

| <<coreCount,`coreCount`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Number of cores.+++

| <<ctClass,`ctClass`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| n/a

| <<kneePointCurrent,`kneePointCurrent`>>
| 0..1
| xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++Maximum primary current where the CT still displays linear characteristicts.+++

| <<kneePointVoltage,`kneePointVoltage`>>
| 0..1
| xref::class/Voltage.adoc[`Voltage`]
| +++Maximum voltage across the secondary terminals where the CT still displays linear characteristicts.+++

| <<maxRatio,`maxRatio`>>
| 0..1
| xref::class/Ratio.adoc[`Ratio`]
| +++Maximum ratio between the primary and secondary current.+++

| <<nominalRatio,`nominalRatio`>>
| 0..1
| xref::class/Ratio.adoc[`Ratio`]
| +++Nominal ratio between the primary and secondary current; i.e. 100:5.+++

| <<primaryFlsRating,`primaryFlsRating`>>
| 0..1
| xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++Full load secondary (FLS) rating for primary winding.+++

| <<primaryRatio,`primaryRatio`>>
| 0..1
| xref::class/Ratio.adoc[`Ratio`]
| +++Ratio for the primary winding tap changer.+++

| <<ratedCurrent,`ratedCurrent`>>
| 0..1
| xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++Rated current on the primary side.+++

| <<secondaryFlsRating,`secondaryFlsRating`>>
| 0..1
| xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++Full load secondary (FLS) rating for secondary winding.+++

| <<secondaryRatio,`secondaryRatio`>>
| 0..1
| xref::class/Ratio.adoc[`Ratio`]
| +++Ratio for the secondary winding tap changer.+++

| <<tertiaryFlsRating,`tertiaryFlsRating`>>
| 0..1
| xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++Full load secondary (FLS) rating for tertiary winding.+++

| <<tertiaryRatio,`tertiaryRatio`>>
| 0..1
| xref::class/Ratio.adoc[`Ratio`]
| +++Ratio for the tertiary winding tap changer.+++

| <<usage,`usage`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Usage: eg. metering, protection, etc.+++

| <<CatalogAssetType,`CatalogAssetType`>>
| 0..1
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]
| +++Asset information (nameplate) for this catalog asset type.+++

| <<ProductAssetModel,`ProductAssetModel`>>
| 0..1
| xref::class/ProductAssetModel.adoc[`ProductAssetModel`]
| +++Product asset model which conforms to this catalog asset type.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<Assets,`Assets`>>
| 0..*
| xref::class/Asset.adoc[`Asset`]
| +++All assets described by this data.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<PowerSystemResources,`PowerSystemResources`>>
| 0..*
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
| +++All power system resources with this datasheet information.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#accuracyClass]
=== `accuracyClass`
+++CT accuracy classification.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.accuracyClass`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#accuracyLimit]
=== `accuracyLimit`
+++Accuracy limit.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.accuracyLimit`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Assets]
=== `Assets`
+++All assets described by this data.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#CatalogAssetType]
=== `CatalogAssetType`
+++Asset information (nameplate) for this catalog asset type.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.CatalogAssetType`
| Cardinality
| 0..1
| Type
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#coreCount]
=== `coreCount`
+++Number of cores.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.coreCount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#ctClass]
=== `ctClass`


[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.ctClass`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#kneePointCurrent]
=== `kneePointCurrent`
+++Maximum primary current where the CT still displays linear characteristicts.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.kneePointCurrent`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]


|===

//[discrete]
[#kneePointVoltage]
=== `kneePointVoltage`
+++Maximum voltage across the secondary terminals where the CT still displays linear characteristicts.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.kneePointVoltage`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]


|===

//[discrete]
[#maxRatio]
=== `maxRatio`
+++Maximum ratio between the primary and secondary current.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.maxRatio`
| Cardinality
| 0..1
| Type
| xref::class/Ratio.adoc[`Ratio`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#nominalRatio]
=== `nominalRatio`
+++Nominal ratio between the primary and secondary current; i.e. 100:5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.nominalRatio`
| Cardinality
| 0..1
| Type
| xref::class/Ratio.adoc[`Ratio`]


|===

//[discrete]
[#PowerSystemResources]
=== `PowerSystemResources`
+++All power system resources with this datasheet information.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.PowerSystemResources`
| Cardinality
| 0..*
| Type
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#primaryFlsRating]
=== `primaryFlsRating`
+++Full load secondary (FLS) rating for primary winding.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.primaryFlsRating`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]


|===

//[discrete]
[#primaryRatio]
=== `primaryRatio`
+++Ratio for the primary winding tap changer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.primaryRatio`
| Cardinality
| 0..1
| Type
| xref::class/Ratio.adoc[`Ratio`]


|===

//[discrete]
[#ProductAssetModel]
=== `ProductAssetModel`
+++Product asset model which conforms to this catalog asset type.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.ProductAssetModel`
| Cardinality
| 0..1
| Type
| xref::class/ProductAssetModel.adoc[`ProductAssetModel`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ratedCurrent]
=== `ratedCurrent`
+++Rated current on the primary side.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.ratedCurrent`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]


|===

//[discrete]
[#secondaryFlsRating]
=== `secondaryFlsRating`
+++Full load secondary (FLS) rating for secondary winding.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.secondaryFlsRating`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]


|===

//[discrete]
[#secondaryRatio]
=== `secondaryRatio`
+++Ratio for the secondary winding tap changer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.secondaryRatio`
| Cardinality
| 0..1
| Type
| xref::class/Ratio.adoc[`Ratio`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tertiaryFlsRating]
=== `tertiaryFlsRating`
+++Full load secondary (FLS) rating for tertiary winding.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.tertiaryFlsRating`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]


|===

//[discrete]
[#tertiaryRatio]
=== `tertiaryRatio`
+++Ratio for the tertiary winding tap changer.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.tertiaryRatio`
| Cardinality
| 0..1
| Type
| xref::class/Ratio.adoc[`Ratio`]


|===

//[discrete]
[#usage]
=== `usage`
+++Usage: eg. metering, protection, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.usage`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===


