v1.1.0/modules/schema/pages/class/CurrentTransformerInfo.adoc
= `CurrentTransformerInfo`
:toclevels: 4


+++Properties of current transformer asset.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:CurrentTransformerInfo`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/AssetInfo.adoc[`AssetInfo`]
*** *`CurrentTransformerInfo`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<accuracyClass,`accuracyClass`>>
//| [[slots_table.accuracyClass]]<<accuracyClass,`accuracyClass`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++CT accuracy classification.+++
| _n/a_

| <<accuracyLimit,`accuracyLimit`>>
//| [[slots_table.accuracyLimit]]<<accuracyLimit,`accuracyLimit`>>
| 0..1 +
xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++Accuracy limit.+++
| _n/a_

| <<coreCount,`coreCount`>>
//| [[slots_table.coreCount]]<<coreCount,`coreCount`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Number of cores.+++
| _n/a_

| <<ctClass,`ctClass`>>
//| [[slots_table.ctClass]]<<ctClass,`ctClass`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| _n/a_
| _n/a_

| <<kneePointCurrent,`kneePointCurrent`>>
//| [[slots_table.kneePointCurrent]]<<kneePointCurrent,`kneePointCurrent`>>
| 0..1 +
xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++Maximum primary current where the CT still displays linear characteristicts.+++
| _n/a_

| <<kneePointVoltage,`kneePointVoltage`>>
//| [[slots_table.kneePointVoltage]]<<kneePointVoltage,`kneePointVoltage`>>
| 0..1 +
xref::class/Voltage.adoc[`Voltage`]
| +++Maximum voltage across the secondary terminals where the CT still displays linear characteristicts.+++
| _n/a_

| <<maxRatio,`maxRatio`>>
//| [[slots_table.maxRatio]]<<maxRatio,`maxRatio`>>
| 0..1 +
xref::class/Ratio.adoc[`Ratio`]
| +++Maximum ratio between the primary and secondary current.+++
| _n/a_

| <<nominalRatio,`nominalRatio`>>
//| [[slots_table.nominalRatio]]<<nominalRatio,`nominalRatio`>>
| 0..1 +
xref::class/Ratio.adoc[`Ratio`]
| +++Nominal ratio between the primary and secondary current; i.e. 100:5.+++
| _n/a_

| <<primaryFlsRating,`primaryFlsRating`>>
//| [[slots_table.primaryFlsRating]]<<primaryFlsRating,`primaryFlsRating`>>
| 0..1 +
xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++Full load secondary (FLS) rating for primary winding.+++
| _n/a_

| <<primaryRatio,`primaryRatio`>>
//| [[slots_table.primaryRatio]]<<primaryRatio,`primaryRatio`>>
| 0..1 +
xref::class/Ratio.adoc[`Ratio`]
| +++Ratio for the primary winding tap changer.+++
| _n/a_

| <<ratedCurrent,`ratedCurrent`>>
//| [[slots_table.ratedCurrent]]<<ratedCurrent,`ratedCurrent`>>
| 0..1 +
xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++Rated current on the primary side.+++
| _n/a_

| <<secondaryFlsRating,`secondaryFlsRating`>>
//| [[slots_table.secondaryFlsRating]]<<secondaryFlsRating,`secondaryFlsRating`>>
| 0..1 +
xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++Full load secondary (FLS) rating for secondary winding.+++
| _n/a_

| <<secondaryRatio,`secondaryRatio`>>
//| [[slots_table.secondaryRatio]]<<secondaryRatio,`secondaryRatio`>>
| 0..1 +
xref::class/Ratio.adoc[`Ratio`]
| +++Ratio for the secondary winding tap changer.+++
| _n/a_

| <<tertiaryFlsRating,`tertiaryFlsRating`>>
//| [[slots_table.tertiaryFlsRating]]<<tertiaryFlsRating,`tertiaryFlsRating`>>
| 0..1 +
xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++Full load secondary (FLS) rating for tertiary winding.+++
| _n/a_

| <<tertiaryRatio,`tertiaryRatio`>>
//| [[slots_table.tertiaryRatio]]<<tertiaryRatio,`tertiaryRatio`>>
| 0..1 +
xref::class/Ratio.adoc[`Ratio`]
| +++Ratio for the tertiary winding tap changer.+++
| _n/a_

| <<usage,`usage`>>
//| [[slots_table.usage]]<<usage,`usage`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Usage: eg. metering, protection, etc.+++
| _n/a_

| <<Assets,`Assets`>>
//| [[slots_table.Assets]]<<Assets,`Assets`>>
| 0..* +
xref::class/Asset.adoc[`Asset`]
| +++All assets described by this data.+++
| xref::class/AssetInfo.adoc[`AssetInfo`]

| <<CatalogAssetType,`CatalogAssetType`>>
//| [[slots_table.CatalogAssetType]]<<CatalogAssetType,`CatalogAssetType`>>
| 0..1 +
xref::class/CatalogAssetType.adoc[`CatalogAssetType`]
| +++Asset information (nameplate) for this catalog asset type.+++
| xref::class/AssetInfo.adoc[`AssetInfo`]

| <<PowerSystemResources,`PowerSystemResources`>>
//| [[slots_table.PowerSystemResources]]<<PowerSystemResources,`PowerSystemResources`>>
| 0..* +
xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
| +++All power system resources with this datasheet information.+++
| xref::class/AssetInfo.adoc[`AssetInfo`]

| <<ProductAssetModel,`ProductAssetModel`>>
//| [[slots_table.ProductAssetModel]]<<ProductAssetModel,`ProductAssetModel`>>
| 0..1 +
xref::class/ProductAssetModel.adoc[`ProductAssetModel`]
| +++Product asset model which conforms to this catalog asset type.+++
| xref::class/AssetInfo.adoc[`AssetInfo`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#accuracyClass]
=== `accuracyClass`
+++CT accuracy classification.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.accuracyClass`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.accuracyClass,&#10548;>>
--
////


//[discrete]
[#accuracyLimit]
=== `accuracyLimit`
+++Accuracy limit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.accuracyLimit`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]


|===

////
[.text-left]
--
<<slots_table.accuracyLimit,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Assets]
=== `Assets`
+++All assets described by this data.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

////
[.text-left]
--
<<slots_table.Assets,&#10548;>>
--
////


//[discrete]
[#CatalogAssetType]
=== `CatalogAssetType`
+++Asset information (nameplate) for this catalog asset type.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.CatalogAssetType`
| Cardinality
| 0..1
| Type
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

////
[.text-left]
--
<<slots_table.CatalogAssetType,&#10548;>>
--
////


//[discrete]
[#coreCount]
=== `coreCount`
+++Number of cores.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.coreCount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.coreCount,&#10548;>>
--
////


//[discrete]
[#ctClass]
=== `ctClass`



[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.ctClass`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.ctClass,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#kneePointCurrent]
=== `kneePointCurrent`
+++Maximum primary current where the CT still displays linear characteristicts.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.kneePointCurrent`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]


|===

////
[.text-left]
--
<<slots_table.kneePointCurrent,&#10548;>>
--
////


//[discrete]
[#kneePointVoltage]
=== `kneePointVoltage`
+++Maximum voltage across the secondary terminals where the CT still displays linear characteristicts.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.kneePointVoltage`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]


|===

////
[.text-left]
--
<<slots_table.kneePointVoltage,&#10548;>>
--
////


//[discrete]
[#maxRatio]
=== `maxRatio`
+++Maximum ratio between the primary and secondary current.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.maxRatio`
| Cardinality
| 0..1
| Type
| xref::class/Ratio.adoc[`Ratio`]


|===

////
[.text-left]
--
<<slots_table.maxRatio,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#nominalRatio]
=== `nominalRatio`
+++Nominal ratio between the primary and secondary current; i.e. 100:5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.nominalRatio`
| Cardinality
| 0..1
| Type
| xref::class/Ratio.adoc[`Ratio`]


|===

////
[.text-left]
--
<<slots_table.nominalRatio,&#10548;>>
--
////


//[discrete]
[#PowerSystemResources]
=== `PowerSystemResources`
+++All power system resources with this datasheet information.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.PowerSystemResources`
| Cardinality
| 0..*
| Type
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

////
[.text-left]
--
<<slots_table.PowerSystemResources,&#10548;>>
--
////


//[discrete]
[#primaryFlsRating]
=== `primaryFlsRating`
+++Full load secondary (FLS) rating for primary winding.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.primaryFlsRating`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]


|===

////
[.text-left]
--
<<slots_table.primaryFlsRating,&#10548;>>
--
////


//[discrete]
[#primaryRatio]
=== `primaryRatio`
+++Ratio for the primary winding tap changer.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.primaryRatio`
| Cardinality
| 0..1
| Type
| xref::class/Ratio.adoc[`Ratio`]


|===

////
[.text-left]
--
<<slots_table.primaryRatio,&#10548;>>
--
////


//[discrete]
[#ProductAssetModel]
=== `ProductAssetModel`
+++Product asset model which conforms to this catalog asset type.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.ProductAssetModel`
| Cardinality
| 0..1
| Type
| xref::class/ProductAssetModel.adoc[`ProductAssetModel`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

////
[.text-left]
--
<<slots_table.ProductAssetModel,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#ratedCurrent]
=== `ratedCurrent`
+++Rated current on the primary side.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.ratedCurrent`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]


|===

////
[.text-left]
--
<<slots_table.ratedCurrent,&#10548;>>
--
////


//[discrete]
[#secondaryFlsRating]
=== `secondaryFlsRating`
+++Full load secondary (FLS) rating for secondary winding.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.secondaryFlsRating`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]


|===

////
[.text-left]
--
<<slots_table.secondaryFlsRating,&#10548;>>
--
////


//[discrete]
[#secondaryRatio]
=== `secondaryRatio`
+++Ratio for the secondary winding tap changer.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.secondaryRatio`
| Cardinality
| 0..1
| Type
| xref::class/Ratio.adoc[`Ratio`]


|===

////
[.text-left]
--
<<slots_table.secondaryRatio,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tertiaryFlsRating]
=== `tertiaryFlsRating`
+++Full load secondary (FLS) rating for tertiary winding.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.tertiaryFlsRating`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]


|===

////
[.text-left]
--
<<slots_table.tertiaryFlsRating,&#10548;>>
--
////


//[discrete]
[#tertiaryRatio]
=== `tertiaryRatio`
+++Ratio for the tertiary winding tap changer.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.tertiaryRatio`
| Cardinality
| 0..1
| Type
| xref::class/Ratio.adoc[`Ratio`]


|===

////
[.text-left]
--
<<slots_table.tertiaryRatio,&#10548;>>
--
////


//[discrete]
[#usage]
=== `usage`
+++Usage: eg. metering, protection, etc.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:CurrentTransformerInfo.usage`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.usage,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
